<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:id="@+id/activity_main"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="8dp">

	<TextView
		android:id="@+id/message"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:layout_marginTop="25dp"
		android:padding="3dp"
		android:text="@string/click_button_example"
		android:textStyle="bold"/>

	<Button
		android:id="@+id/string_request"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/message"
		android:text="@string/string_request"/>

	<Button
		android:id="@+id/json_object_request"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/string_request"
		android:text="@string/json_object_request"/>

	<Button
		android:id="@+id/json_array_request"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/json_object_request"
		android:text="@string/json_array_request"/>

	<Button
		android:id="@+id/image_request"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/json_array_request"
		android:text="@string/image_request"/>

</RelativeLayout>
