<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="10dp">

		<LinearLayout
			android:id="@+id/image_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:orientation="vertical">

			<Button
				android:id="@+id/load_image"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:text="@string/load_image_into_imageview"
				android:textAllCaps="false"/>

			<ImageView
				android:id="@+id/image_view"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:contentDescription="@string/imageview"/>

		</LinearLayout>

		<LinearLayout
			android:id="@+id/image_with_placeholder_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/image_container"
			android:layout_marginBottom="10dp"
			android:orientation="vertical">

			<Button
				android:id="@+id/load_image_placeholder_error"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:text="@string/load_image_with_placehodler_error_into_imageview"
				android:textAllCaps="false"/>

			<ImageView
				android:id="@+id/image_view_placeholder_error"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:contentDescription="@string/imageview"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/image_with_placeholder_container"
			android:orientation="vertical">

			<Button
				android:id="@+id/load_network_image"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:text="@string/load_image_into_networkimageview"
				android:textAllCaps="false"/>

			<com.android.volley.toolbox.NetworkImageView
				android:id="@+id/network_image_view"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>

		</LinearLayout>

	</RelativeLayout>

</ScrollView>
